# lab1_2ndsem

./: .gitignore  CMakeLists.txt  controller.c  controller.h  errors.c  errors.h  functions.c  functions.h  lab.c  main.c  makefile  matrix.c  matrix.h  type_double.c  type_double.h  type_float.c  type_float.h  type_info.h  type_int.c  type_int.h
headers/: controller.h  errors.h  matrix.h  type_double.h  type_double_functions.h  type_info.h  type_int.h  type_int_functions.h
sources/: controller.c  errors.c  googletest.cpp  lab.c  matrix.c  type_double.c  type_int.c
